<resources>
    <string name="app_name">Zeiterfassung</string>

    <!-- Text Strings -->
    <string name="txt_begrussung1">Hallo</string>
    <string name="txt_einstempeln">Einstempeln</string>
    <string name="txt_ausstempeln">Ausstempeln</string>
    <string name="txt_stempeln">Stempeln</string>
    <string name="txt_datum_uhrzeit_platzhalter">00.00.00 00:00</string>
    <string name="txt_uhrzeit_platzhalter">00:00</string>
    <string name="txt_abschied">Auf Wiedersehen</string>
    <string name="txt_wo_bist_du">Wo bist du?</string>
    <string name="txt_meldung_eingestempelt">Eingestempelt!</string>
    <string name="txt_eingestempelt_um">Eingestempelt um:</string>
    <string name="txt_produktiv_stunden">Produktiv Stunden:</string>

    <!-- Strings Arrays -->
    <string-array name="stempel_ort">
        <item>Büro</item>
        <item>Kunde</item>
        <item>Werkstatt</item>
        <item>Home Office</item>
    </string-array>

    <string-array name="ausstempel_grund">
        <item>Feierabend</item>
        <item>Dienstgang</item>
        <item>Pause</item>
    </string-array>

    <string-array name="monat_uebersicht">
        <item>Oktober 2015</item>
        <item>August 2015</item>
        <item>September 2015</item>
        <item>Dezember 2015</item>
    </string-array>


    <string-array name="stempel">
        <item>Kommen</item>
        <item>Gehen</item>
        <item>Pause</item>
    </string-array>

    <!-- ActionBar Menu  -->
    <string name="action_stempeluhr">Stempeluhr</string>
    <string name="action_nachstempeln">Nachstempeln</string>
    <string name="action_monatsubersicht">Monat</string>
    <string name="action_projektverwaltung">Projekt</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_beenden">Beenden</string>

    <!-- Activity Title -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="title_activity_stempeluhr">Stempeluhr</string>
    <string name="title_activity_monatsuebersicht">Übersicht</string>
    <string name="title_activity_tag_detail">Tag Detail</string>
    <string name="title_activity_nachstempeln">Nachstempeln</string>

    <!-- Settings -->
    <string name="pref_header_general">Persönliche Einstellungen</string>
    <string name="pref_title_display_name">Mitarbeiter Name</string>
    <string name="pref_default_display_name">Vorname Nachname</string>

    <!-- Server Daten -->
    <string name="pref_header_server_data">Server Daten</string>
    <string name="pref_server_adresse">Server Adresse</string>
    <string name="pref_server_login">Login Name</string>
    <string name="pref_server_pass">Passwort</string>
    <string name="pref_server_refesh_time">Refresh Zyklus Zeit in Minuten</string>
    <string name="pref_server_daten">Server Daten</string>


</resources>
