<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_layout_margin"
    android:orientation="vertical"
    tools:context="de.bsg.zeiterfassung.gui.activitys.StempeluhrActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stempeluhr_datum_uhrzeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_datum_uhrzeit_platzhalter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/stempelart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:entries="@array/stempel_ort"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>

        <Button
            android:id="@+id/buttonEinstempeln"
            android:text="@string/txt_einstempeln"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/bsg_button_einstempeln" />

        <View
            style="@style/Trennlinie"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/table_padding"
                    android:text="@string/txt_eingestempelt_um"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/einstempel_zeit_platzhalter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/table_padding"
                    android:text="@string/txt_uhrzeit_platzhalter"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow><TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/table_padding"
                    android:text="@string/txt_produktiv_stunden"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/austempel_zeit_platzhalter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/table_padding"
                    android:text="@string/txt_uhrzeit_platzhalter"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <View
            style="@style/Trennlinie"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp" />

        <Spinner
            android:id="@+id/austempel_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:entries="@array/ausstempel_grund"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown"/>

        <Button
            android:id="@+id/buttonAusstemplen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/bsg_ausstempeln_button"
            android:text="@string/txt_ausstempeln"
            android:textColor="@color/bsg_btt_einstempeln_text"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>